--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -20,18 +20,6 @@
                   <object class="AdwPreferencesGroup">
                     <property name="title">Configuration properties</property>
                     <child>
-                      <object class="AdwActionRow">
-                        <property name="subtitle">Display a nice text highligth for the unit file</property>
-                        <property name="title">Unit file highlighting</property>
-                        <child>
-                          <object class="GtkSwitch" id="unit_file_highlight">
-                            <property name="valign">baseline-center</property>
-                            <signal name="state-set" handler="unit_file_highlighting_state_set" swapped="yes"/>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                    <child>
                       <object class="AdwComboRow" id="timestamp_style">
                         <property name="subtitle"> Change the format of printed timestamps</property>
                         <property name="title">Timestamp style</property>
@@ -62,7 +50,29 @@
                 </child>
                 <child>
                   <object class="AdwPreferencesGroup">
-                    <property name="title">Journal properties</property>
+                    <property name="title">Unit File</property>
+                    <child>
+                      <object class="AdwActionRow">
+                        <property name="subtitle">Display a nice text highligth for the unit file</property>
+                        <property name="title">Unit file highlighting</property>
+                        <child>
+                          <object class="GtkSwitch" id="unit_file_highlight">
+                            <property name="valign">baseline-center</property>
+                            <signal name="state-set" handler="unit_file_highlighting_state_set" swapped="yes"/>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwComboRow" id="unit_file_style">
+                        <property name="title">Text Style</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="AdwPreferencesGroup">
+                    <property name="title">Journal</property>
                     <child>
                       <object class="AdwActionRow">
                         <property name="subtitle">To see the logs in color</property>
