--- a/data/interfaces/unit_file_panel.ui
+++ b/data/interfaces/unit_file_panel.ui
@@ -13,9 +13,9 @@
           <object class="GtkStackPage">
             <property name="child">
               <object class="AdwStatusPage">
-                <property name="description">The  unit has no corresponding file</property>
+                <property name="description">The  unit has no file associated</property>
                 <property name="icon-name">unreadable-symbolic</property>
-                <property name="title">No file</property>
+                <property name="title">No unit file</property>
               </object>
             </property>
             <property name="name">empty</property>
