--- a/data/interfaces/unit_info.ui
+++ b/data/interfaces/unit_info.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.90.4 -->
+<!-- Created with Cambalache 0.94.1 -->
 <interface>
   <!-- interface-name unit_info.ui -->
   <requires lib="gtk" version="4.6"/>
@@ -23,9 +23,33 @@
       </object>
     </child>
     <child>
-      <object class="GtkScrolledWindow">
+      <object class="GtkBox">
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkListBox" id="unit_properties"/>
+          <object class="GtkSearchBar">
+            <property name="hexpand">True</property>
+            <property name="search-mode-enabled">True</property>
+            <property name="show-close-button">True</property>
+            <child>
+              <object class="GtkBox">
+                <child>
+                  <object class="GtkSearchEntry" id="search_entry">
+                    <signal name="search-changed" handler="search_changed" swapped="yes"/>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkScrolledWindow">
+            <property name="vexpand">True</property>
+            <child>
+              <object class="GtkListBox" id="unit_properties">
+                <property name="selection-mode">none</property>
+              </object>
+            </child>
+          </object>
         </child>
       </object>
     </child>
