--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -23,9 +23,9 @@
           <object class="GtkStackPage">
             <property name="child">
               <object class="AdwStatusPage">
-                <property name="description">No units returned</property>
+                <property name="description">No units returned, set environmental variable "RUST_LOG=info" to see what happend.</property>
                 <property name="icon-name">help-about-symbolic</property>
-                <property name="title">Someting went wrong</property>
+                <property name="title">Something went wrong</property>
               </object>
             </property>
             <property name="name">empty</property>
