--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -23,12 +23,12 @@
           <object class="GtkStackPage">
             <property name="child">
               <object class="AdwStatusPage">
-                <property name="description">No units returned, set environmental variable "RUST_LOG=info" to see what happend.</property>
-                <property name="icon-name">help-about-symbolic</property>
+                <property name="description">No units returned, set environmental variable &lt;b&gt;RUST_LOG=info&lt;/b&gt; to see what happend.</property>
+                <property name="icon-name">sad-computer-symbolic</property>
                 <property name="title">Something went wrong</property>
               </object>
             </property>
-            <property name="name">empty</property>
+            <property name="name">error</property>
           </object>
         </child>
         <child>
