--- a/data/interfaces/kill_panel.ui
+++ b/data/interfaces/kill_panel.ui
@@ -1,87 +1,87 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!-- Created with Cambalache 0.94.1 -->
 <interface>
+  <!-- interface-name kill_panel.ui -->
   <requires lib="gtk" version="4.12"/>
   <requires lib="libadwaita" version="1.6"/>
   <template class="KillPanel" parent="AdwWindow">
-    <child>
-      <object class="GtkBox">
-        <property name="baseline-position">top</property>
-        <property name="margin-bottom">5</property>
-        <property name="margin-end">5</property>
-        <property name="margin-start">5</property>
-        <property name="margin-top">5</property>
-        <property name="orientation">vertical</property>
-        <property name="spacing">5</property>
-        <child>
-          <object class="GtkLabel">
-            <property name="css-classes">title-1</property>
-            <property name="label">Kill unit</property>
-            <child>
-              <object class="GtkLabel"/>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel" id="unit_label">
-            <property name="ellipsize">end</property>
-            <property name="single-line-mode">True</property>
-            <property name="width-chars">30</property>
-          </object>
-        </child>
-        <child>
-          <object class="AdwPreferencesGroup">
-            <property name="title">Signal</property>
-            <child>
-              <object class="AdwEntryRow" id="signal_id_entry">
-                <property name="title">Send signal: </property>
-                <signal name="changed" handler="kill_signal_text_change" swapped="yes"/>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="AdwPreferencesGroup">
-            <property name="description">which processes</property>
-            <property name="title">Who to kill</property>
-            <child>
-              <object class="AdwComboRow" id="who_to_kill"/>
-            </child>
-          </object>
-        </child>
-        <child>
+    <property name="content">
+      <object class="AdwToolbarView">
+        <property name="bottom-bar-style">raised</property>
+        <property name="content">
           <object class="GtkBox">
-            <property name="halign">end</property>
-            <property name="margin-top">10</property>
-            <property name="spacing">10</property>
+            <property name="margin-bottom">5</property>
+            <property name="margin-end">5</property>
+            <property name="margin-start">5</property>
+            <property name="margin-top">5</property>
+            <property name="orientation">vertical</property>
+            <property name="spacing">5</property>
             <child>
-              <object class="GtkButton" id="cancel_button">
-                <property name="label">Cancel</property>
-                <signal name="clicked" handler="button_cancel_clicked" swapped="yes"/>
+              <object class="AdwPreferencesGroup">
+                <property name="title">Signal</property>
+                <child>
+                  <object class="AdwEntryRow" id="signal_id_entry">
+                    <property name="title">Send signal: </property>
+                    <signal name="changed" handler="kill_signal_text_change" swapped="yes"/>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
-              <object class="GtkButton" id="send_button">
-                <property name="css-classes">suggested-action</property>
-                <property name="label">Send</property>
-                <property name="sensitive">False</property>
-                <signal name="clicked" handler="button_send_clicked" swapped="yes"/>
+              <object class="AdwPreferencesGroup">
+                <property name="description">which processes</property>
+                <property name="title">Who to kill</property>
+                <child>
+                  <object class="AdwComboRow" id="who_to_kill"/>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkBox">
+                <property name="halign">end</property>
+                <property name="margin-top">10</property>
+                <property name="spacing">10</property>
+                <child>
+                  <object class="GtkButton" id="cancel_button">
+                    <property name="label">Cancel</property>
+                    <signal name="clicked" handler="button_cancel_clicked" swapped="yes"/>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkButton" id="send_button">
+                    <property name="css-classes">suggested-action</property>
+                    <property name="label">Send</property>
+                    <property name="sensitive">False</property>
+                    <signal name="clicked" handler="button_send_clicked" swapped="yes"/>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow">
+                <property name="vexpand">True</property>
+                <child>
+                  <object class="AdwPreferencesGroup" id="signals_group">
+                    <property name="description">most common linux signals</property>
+                    <property name="title">Common signals</property>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
-        </child>
-        <child>
-          <object class="GtkScrolledWindow">
-            <property name="vexpand">True</property>
-            <child>
-              <object class="AdwPreferencesGroup" id="signals_group">
-                <property name="description">most common linux signals</property>
-                <property name="title">Common signals</property>
+        </property>
+        <child type="top">
+          <object class="AdwHeaderBar">
+            <property name="title-widget">
+              <object class="AdwWindowTitle" id="window_title">
+                <property name="title">Kill Unit</property>
               </object>
-            </child>
+            </property>
           </object>
         </child>
       </object>
-    </child>
+    </property>
+    <property name="height-request">850</property>
+    <property name="width-request">360</property>
   </template>
 </interface>
