--- a/data/interfaces/kill_panel.ui
+++ b/data/interfaces/kill_panel.ui
@@ -18,21 +18,25 @@
             <property name="spacing">5</property>
             <child>
               <object class="AdwPreferencesGroup">
-                <property name="title">Signal</property>
+                <property name="title">Parameters</property>
                 <child>
                   <object class="AdwEntryRow" id="signal_id_entry">
-                    <property name="title">Send signal: </property>
+                    <property name="title">Unix signal</property>
                     <signal name="changed" handler="kill_signal_text_change" swapped="yes"/>
                   </object>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwPreferencesGroup">
-                <property name="description">which processes</property>
-                <property name="title">Who to kill</property>
                 <child>
-                  <object class="GtkDropDown" id="who_to_kill"/>
+                  <object class="AdwComboRow" id="who_to_kill">
+                    <property name="subtitle">Unit related processes</property>
+                    <property name="title">Who to kill</property>
+                    <signal name="activate" handler="who_to_kill_activate" swapped="yes"/>
+                    <signal name="activated" handler="who_to_kill_activated" swapped="yes"/>
+                  </object>
+                </child>
+                <child>
+                  <object class="AdwEntryRow" id="signal_value">
+                    <property name="title">Signal Value</property>
+                  </object>
                 </child>
               </object>
             </child>
@@ -63,7 +67,7 @@
                 <child>
                   <object class="AdwPreferencesGroup" id="signals_group">
                     <property name="description">most common linux signals</property>
-                    <property name="title">Common signals</property>
+                    <property name="title">Common Unix signals</property>
                   </object>
                 </child>
               </object>
